# fm-sim

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  fm-sim.repos  install.sh  run.sh
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
docs/diagrams/: README.md  backends.d2  sim_loop.d2
fm_sim/: CMakeLists.txt  README.md  package.xml
fm_sim_backends/: README.md  package.xml  setup.cfg  setup.py
fm_sim_backends/launch/: gazebo.launch.py  isaac.launch.py  mujoco.launch.py
fm_sim_backends/test/: test_import.py
fm_sim_core/: README.md  package.xml  setup.cfg  setup.py
fm_sim_core/config/: sim.yaml
fm_sim_core/fm_sim_core/: sim_loop.py  stepper.py
fm_sim_core/launch/: sim.launch.py
fm_sim_core/test/: test_import.py  test_sim.py
fm_sim_models/: README.md  package.xml  setup.cfg  setup.py
fm_sim_models/assets/mujoco/so101/: bin_sort.xml  pick_place.xml  table_reach.xml
fm_sim_models/fm_sim_models/: models.py
fm_sim_models/models/axol/: axol.xml
fm_sim_models/test/: test_import.py  test_models.py
scripts/: smoke.sh
